--- a/src/Makefile
+++ b/src/Makefile
@@ -2,20 +2,23 @@ CC = gcc
 YACC = yacc -d -v
 LEX = lex
 
-parser: y.tab.o lex.yy.o stack.o
-	$(CC) -o parser y.tab.o lex.yy.o stack.o -lfl
+parser: y.tab.o lex.yy.o stack.o makeCode.o
+	$(CC) -o parser y.tab.o lex.yy.o stack.o makeCode.o -ll
 
-y.tab.o: parser.y
+y.tab.o: parser.y stack.h optype.h code.h
 	$(YACC) parser.y
-	$(CC) y.tab.c -c -lfl
+	$(CC) y.tab.c -c -ll
 
-lex.yy.o: scanner.l y.tab.h
+lex.yy.o: scanner.l y.tab.h stack.h optype.h
 	$(LEX) scanner.l
-	$(CC) lex.yy.c -c -lfl
+	$(CC) lex.yy.c -c -ll
 
 stack.o: stack.c stack.h
 	$(CC) stack.c -c
 
+codeview.c: codeview.c code.h optype.h
+	$(CC) codeview.c -c
+
 clean:
-	rm -f *.o lex.yy.c y.tab.c y.tab.h
+	rm -f *.o lex.yy.c y.tab.c y.tab.h y.output
 
